<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arch_test</name>
  <version>0.0.0</version>
  <description>Integration Testing Package</description>
  <maintainer email="samyzaitoun@campus.technion.ac.il">samuel</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>arch_interfaces</depend>
  <build_depend>arch_components</build_depend>
  <exec_depend>arch_components</exec_depend>
  <build_depend>threading</build_depend>
  <exec_depend>threading</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
